--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,18 +1,15 @@
 .container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f7f7f7;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #f7f7f7;
+  justify-content: center;  
 }
 
-.link-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
 .topLinks {
   display: flex;
