--- a/styles/FormTemplate.module.css
+++ b/styles/FormTemplate.module.css
@@ -15,7 +15,7 @@
   background-color: #fff;
   border: 1px solid #ccc;
   padding: 20px;
-  margin-bottom: 20px;
+  margin: 20px auto 20px auto;
 }
 
 .select {
