--- a/styles/FormTemplate.module.css
+++ b/styles/FormTemplate.module.css
@@ -40,10 +40,8 @@
 
 .label {
   font-size: 16px;
-  margin-top: 20px;
-  display: block;
-  border-radius: 5px;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,.15);
+  padding: 6px;
+  font-family: "Arial", sans-serif;
 }
 
 .input {
@@ -105,6 +103,7 @@
   border: 1px solid #ccc;
   width: 50%;
   font-size: 16px;
+  margin: 5px;
   margin-right: 10px;
   border-radius: 5px;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,.15);
